# esp_zb_env_sensor

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig.dbg.c6  sdkconfig.dbg.h2  sdkconfig.rel.c6  sdkconfig.rel.h2
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/sensors/: aht21.cpp  aht21.hpp  ens160.cpp  ens160.hpp  scd40.cpp  scd40.hpp
main/zb/: zb_main.cpp  zb_main.hpp
z2m/: co2_ng.js
