idf_component_register(SRCS "main.cpp"
                    sensors/aht21.hpp
                    sensors/aht21.cpp
                    sensors/ens160.hpp
                    sensors/ens160.cpp
                    sensors/scd40.hpp
                    sensors/scd40.cpp
                    INCLUDE_DIRS "")
